[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "google-generativeai==0.3.2",
    "python-dotenv==1.0.1",
    "python-telegram-bot==20.7",
    "telegram>=0.0.1",
    "oauthlib>=3.2.2",
    "flask-wtf>=1.2.2",
    "requests==2.31.0",
]
